--- a/SASS/src/layout/_footer.scss
+++ b/SASS/src/layout/_footer.scss
@@ -22,7 +22,7 @@ footer {
     }
 }
 
-@media screen and (min-width: 1001px) {
+@media screen and (min-width: 601px) and (max-width: 1000px) {
     footer {
         & .logo {
             display: flex;
@@ -33,9 +33,8 @@ footer {
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            width: 50em;
             & li {
-            margin-right: 3em;
+            margin-right: 2em;
             display: flex;
             align-items: center;
                 & i {
