--- a/public/css/fontawesome.css
+++ b/public/css/fontawesome.css
@@ -1,6 +1,4 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 /*!
  * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
@@ -6067,353 +6065,4 @@ readers do not read off random characters that represent icons */
   width: auto;
 }
 
-/*!
- * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
- * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
- */
-@font-face {
-  font-family: "Font Awesome 5 Free";
-  font-style: normal;
-  font-weight: 900;
-  font-display: block;
-  src: url("../webfonts/fa-solid-900.eot");
-  src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.woff") format("woff"), url("../webfonts/fa-solid-900.ttf") format("truetype"), url("../webfonts/fa-solid-900.svg#fontawesome") format("svg");
-}
-.fa,
-.fas {
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-}
-
-header {
-  color: #000;
-  display: flex;
-  align-items: baseline;
-}
-header .return-to-index {
-  font-size: 1.5em;
-  margin: 0.5em 1em;
-}
-header .return-to-index a {
-  text-decoration-line: none;
-  color: #000;
-}
-header .logo {
-  margin: 0.5em auto;
-  font-size: 2.5em;
-  font-family: Shrikhand;
-}
-
-footer {
-  background: #000;
-  color: #fff;
-  padding: 1em 2em 1em 2em;
-}
-footer .logo {
-  color: #fff;
-  font-size: 1em;
-  font-family: Shrikhand, OpenSans, Montserrat, Raleway;
-  line-height: 2.5;
-}
-footer ul li {
-  list-style: none;
-  line-height: 1.5;
-}
-footer ul li i {
-  margin-right: 0.5em;
-}
-footer ul li a {
-  text-decoration-line: none;
-  color: #fff;
-}
-
-@media screen and (min-width: 601px) and (max-width: 1000px) {
-  footer .logo {
-    display: flex;
-    justify-content: center;
-  }
-  footer ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  footer ul li {
-    margin-right: 2em;
-    display: flex;
-    align-items: center;
-  }
-  footer ul li i {
-    margin-right: 1em;
-  }
-}
-@media screen and (min-width: 1001px) {
-  footer .logo {
-    display: flex;
-    justify-content: center;
-  }
-  footer ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  footer ul li {
-    margin-right: 3em;
-    display: flex;
-  }
-}
-.heart {
-  width: 1.25em;
-}
-.heart path {
-  fill: transparent;
-  stroke-width: 30;
-  stroke: #9356DC;
-}
-
-.heart:hover path {
-  animation: animate-heart 2s linear forwards;
-  transition: 0.1s ease 0s;
-}
-
-@keyframes animate-heart {
-  0% {
-    fill: transparent;
-  }
-  100% {
-    fill: #9356DC;
-  }
-}
-* {
-  box-sizing: border-box;
-  margin: auto;
-  padding: 0;
-  font-family: Roboto, serif;
-}
-
-p {
-  margin: 0 0 0 0;
-}
-
-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-section .image {
-  height: 15em;
-  width: 100%;
-  object-fit: cover;
-}
-section .menu {
-  width: 100%;
-  background-color: #e6e3e3c9;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: sticky;
-  padding: 1em 1em;
-  margin-top: -40px;
-  border-radius: 2.5em 2.5em 0 0;
-}
-section .menu .title_menu {
-  display: flex;
-  flex-direction: row;
-}
-section .menu .title_menu h2 {
-  align-items: left;
-  font-family: Shrikhand;
-  margin-left: 0.5em;
-  margin-right: 5em;
-}
-section .menu .title_menu .heart {
-  margin-left: auto;
-  margin-right: auto;
-}
-section .menu h3 {
-  text-transform: uppercase;
-  font-weight: 400;
-  font-size: 1em;
-  margin: 1em 1em;
-  width: 8%;
-  padding-bottom: 0.5em;
-  border-bottom: 0.25em solid #99E2D0;
-}
-section .menu .plat {
-  width: 25em;
-  color: #000;
-  border-radius: 1em;
-  background-color: #fff;
-  margin: 0.5em 0.5em;
-  box-shadow: 0.3em 0.3em 0.15em #d3d3d3;
-}
-section .menu .plat :hover {
-  cursor: pointer;
-}
-section .menu .plat .price {
-  display: flex;
-  margin: 0 1em 0 auto;
-}
-section button {
-  color: #fff;
-  background-image: linear-gradient(#FF79DA, #9356DC);
-  border-radius: 5em;
-  padding: 0.8em 1.5em;
-  display: flex;
-  justify-content: center;
-  margin: 1.5em auto;
-  box-shadow: 0.3em 0.3em 0.15em #d3d3d3;
-}
-section button :hover {
-  cursor: pointer;
-}
-
-.menu .entree1 {
-  animation: apparition 3s backwards 0.5s 1;
-}
-
-.menu .entree2 {
-  animation: apparition 3s backwards 1s 1;
-}
-
-.menu .entree3 {
-  animation: apparition 3s backwards 1.5s 1;
-}
-
-.menu .entree4 {
-  animation: apparition 3s backwards 2s 1;
-}
-
-.menu .plat1 {
-  animation: apparition 3s backwards 2.5s 1;
-}
-
-.menu .plat2 {
-  animation: apparition 3s backwards 3s 1;
-}
-
-.menu .plat3 {
-  animation: apparition 3s backwards 3.5s 1;
-}
-
-.menu .douceur1 {
-  animation: apparition 3s backwards 4s 1;
-}
-
-.menu .douceur2 {
-  animation: apparition 3s backwards 4.5s 1;
-}
-
-.menu .douceur3 {
-  animation: apparition 3s backwards 5s 1;
-}
-
-@keyframes apparition {
-  from {
-    bottom: 400px;
-    opacity: 0;
-  }
-  to {
-    bottom: 100px;
-    opacity: 1;
-  }
-}
-.starter, .main-course, .dessert {
-  display: flex;
-  flex-direction: row;
-  width: 80%;
-}
-
-.text_info {
-  width: 69%;
-  margin: 0;
-  padding: 1em 0 1em 1em;
-}
-
-.precision {
-  width: 70%;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.text_choose {
-  margin-right: -2.5em;
-  display: flex;
-  justify-content: flex-end;
-  position: relative;
-  transition: 1s;
-}
-
-.plat:hover {
-  cursor: pointer;
-}
-.plat:hover .text_choose {
-  margin-right: 0;
-  transition: 1s;
-  display: flex;
-  align-items: center;
-}
-.plat:hover .text_choose .price {
-  margin: 0;
-}
-.plat:hover .text_choose .checkbox {
-  color: white;
-  background-color: #99E2D0;
-  margin-left: 0.5em;
-  animation: checkbox-rotation 1s;
-  padding: 1.5em 1.5em;
-  border-radius: 0 1em 1em 0;
-}
-
-@keyframes text_choose-appear {
-  from {
-    transform: scale(0);
-  }
-  to {
-    transform: scale(1);
-    transition: transform 1s ease 0.2s;
-  }
-}
-@keyframes checkbox-rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(-360deg);
-  }
-}
-.fa-check-circle {
-  font-size: 1.5em;
-}
-
-.title, .price {
-  font-weight: 700;
-}
-
-.price {
-  padding: 0 0.5em;
-}
-
-@media screen and (min-width: 1001px) {
-  .menu {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 80%;
-  }
-  .menu .first, .menu .second, .menu .third {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  .menu .plat {
-    display: flex;
-    flex-direction: column;
-    width: 30em;
-  }
-}
-
-/*# sourceMappingURL=menu1.css.map */
+/*# sourceMappingURL=fontawesome.css.map */
