--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,7 +37,7 @@ footer ul li a {
   color: #fff;
 }
 
-@media screen and (min-width: 1001px) {
+@media screen and (min-width: 601px) and (max-width: 1000px) {
   footer .logo {
     display: flex;
     justify-content: center;
@@ -47,10 +47,9 @@ footer ul li a {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 50em;
   }
   footer ul li {
-    margin-right: 3em;
+    margin-right: 2em;
     display: flex;
     align-items: center;
   }
@@ -187,11 +186,10 @@ body {
   align-items: center;
 }
 .reservation .select_menu button {
-  width: 60%;
   color: #fff;
   background-image: linear-gradient(#FF79DA, #9356DC);
   border-radius: 5em;
-  padding: 0.8em 0.8em;
+  padding: 0.8em 1.5em;
   display: flex;
   justify-content: center;
   box-shadow: 0.3em 0.3em 0.15em #d3d3d3;
@@ -223,7 +221,6 @@ body {
   margin-bottom: 1em;
   width: 90%;
   box-shadow: 0.3em 0.3em 0.15em #d3d3d3;
-  align-items: baseline;
 }
 .functioning_restaurants .functioning div .number {
   border-radius: 50%;
@@ -336,10 +333,6 @@ body {
   .functioning_restaurants .functioning_restaurants .functioning {
     width: 40%;
   }
-  .functioning_restaurants .functioning_restaurants .functioning .number1, .functioning_restaurants .functioning_restaurants .functioning .number2, .functioning_restaurants .functioning_restaurants .functioning .number3 {
-    align-items: baseline;
-    margin-right: auto;
-  }
   .functioning_restaurants .functioning_restaurants .restaurants {
     width: 60%;
   }
@@ -356,6 +349,11 @@ body {
   .functioning_restaurants .functioning_restaurants .restaurants .all_elements .element .nouveau1, .functioning_restaurants .functioning_restaurants .restaurants .all_elements .element .nouveau2 {
     width: 42%;
     right: -325px;
+  }
+  .functioning_restaurants .number1, .functioning_restaurants .number2, .functioning_restaurants .number3 {
+    display: flex;
+    align-items: baseline;
+    margin-right: auto;
   }
 }
 @media screen and (min-width: 1001px) {
