--- a/SASS/src/utils/_variables.scss
+++ b/SASS/src/utils/_variables.scss
@@ -5,7 +5,7 @@ $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
 $neutral-color-100: #fff;
-$neutral-color-200: #e6e3e3c9;
+$neutral-color-200: #e6e3e3;
 $neutral-color-300: #d3d3d3;
 $neutral-color-400: #c0b7b7;
 $neutral-color-500: #000;
