--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
@@ -74,28 +73,16 @@ footer ul li a {
   }
 }
 .heart {
+  background-image: url("../../images/svg/heart-thin.svg");
   width: 1.5em;
-  padding: 0.2em 0.2em;
+  height: 1.5em;
+  background-repeat: no-repeat;
+  margin: 16px;
 }
-.heart path {
-  fill: transparent;
-  stroke-width: 30;
-  stroke: #9356DC;
-}
-
-.heart:hover path {
-  animation: animate-heart 2s linear forwards;
-  transition: 0.1s ease 0s;
+.heart:hover {
+  background-image: url("../../images/svg/heart.svg");
 }
 
-@keyframes animate-heart {
-  0% {
-    fill: transparent;
-  }
-  100% {
-    fill: #9356DC;
-  }
-}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -156,7 +143,7 @@ body {
   }
 }
 .reservation {
-  background-color: #e6e3e3c9;
+  background-color: #e6e3e3;
   margin: 0.5em 0em;
 }
 .reservation h2 {
@@ -170,15 +157,13 @@ body {
   display: flex;
   justify-content: center;
   border-top: 0.1em solid #c0b7b7;
-  box-shadow: 1.5em 2em 2em 0.5em #d3d3d3;
-  /*chiffres à revoir*/
 }
 .reservation .location input {
   background-color: #d3d3d3;
   border: none;
 }
 .reservation .select_menu {
-  background-color: #e6e3e3c9;
+  background-color: #e6e3e3;
   padding: 1.5em 1.5em;
   display: flex;
   flex-direction: column;
@@ -202,9 +187,7 @@ body {
   width: 100%;
 }
 .functioning_restaurants .functioning {
-  margin-top: 2em;
-  margin-left: 2em;
-  padding: 0.8em 0.8em;
+  padding: 2em 1em 1em 1em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -215,7 +198,7 @@ body {
   margin-bottom: 1em;
 }
 .functioning_restaurants .functioning div {
-  background-color: #e6e3e3c9;
+  background-color: #e6e3e3;
   border-radius: 2em;
   padding: 1em 1em;
   margin-bottom: 1em;
@@ -244,15 +227,11 @@ body {
   margin-top: 2em;
   padding: 0.8em 0.8em;
   line-height: 1.5em;
-  background-color: #e6e3e3c9;
+  background-color: #e6e3e3;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-.functioning_restaurants .restaurants h3 {
-  display: flex;
-  margin-bottom: 1em;
 }
 .functioning_restaurants .restaurants .cards {
   display: flex;
@@ -261,10 +240,17 @@ body {
   border-radius: 2em;
   width: 100%;
 }
+.functioning_restaurants .restaurants .cards h3 {
+  display: flex;
+  margin-bottom: 1em;
+}
 .functioning_restaurants .restaurants .cards .all_elements {
   margin: auto auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-.functioning_restaurants .restaurants .cards .element {
+.functioning_restaurants .restaurants .cards .all_elements .element {
   width: 25em;
   background-color: #fff;
   border-radius: 1.5em;
@@ -272,30 +258,30 @@ body {
   margin: 1em 1em 2em 1em;
   box-shadow: 0.3em 0.3em 0.15em #d3d3d3;
 }
-.functioning_restaurants .restaurants .cards .element a {
+.functioning_restaurants .restaurants .cards .all_elements .element a {
   text-decoration: none;
   color: #000;
 }
-.functioning_restaurants .restaurants .cards .element .palette-du-gout, .functioning_restaurants .restaurants .cards .element .note-enchantee, .functioning_restaurants .restaurants .cards .element .a-la-francaise, .functioning_restaurants .restaurants .cards .element .delice-des-sens {
+.functioning_restaurants .restaurants .cards .all_elements .element .palette-du-gout, .functioning_restaurants .restaurants .cards .all_elements .element .note-enchantee, .functioning_restaurants .restaurants .cards .all_elements .element .a-la-francaise, .functioning_restaurants .restaurants .cards .all_elements .element .delice-des-sens {
   height: 15em;
   border-top-right-radius: 1.5em;
   border-top-left-radius: 1.5em;
   background-size: cover;
   background-position: center;
 }
-.functioning_restaurants .restaurants .cards .element .palette-du-gout {
+.functioning_restaurants .restaurants .cards .all_elements .element .palette-du-gout {
   background-image: url("../../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
 }
-.functioning_restaurants .restaurants .cards .element .note-enchantee {
+.functioning_restaurants .restaurants .cards .all_elements .element .note-enchantee {
   background-image: url("../../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
 }
-.functioning_restaurants .restaurants .cards .element .a-la-francaise {
+.functioning_restaurants .restaurants .cards .all_elements .element .a-la-francaise {
   background-image: url("../../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
 }
-.functioning_restaurants .restaurants .cards .element .delice-des-sens {
+.functioning_restaurants .restaurants .cards .all_elements .element .delice-des-sens {
   background-image: url("../../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
 }
-.functioning_restaurants .restaurants .cards .element .nouveau1, .functioning_restaurants .restaurants .cards .element .nouveau2 {
+.functioning_restaurants .restaurants .cards .all_elements .element .nouveau1, .functioning_restaurants .restaurants .cards .all_elements .element .nouveau2 {
   color: #2c9c81;
   background-color: #99E2D0;
   border-radius: 0.5em;
@@ -307,99 +293,77 @@ body {
   top: 14px;
   right: -296px;
 }
-.functioning_restaurants .restaurants .cards .element .description {
+.functioning_restaurants .restaurants .cards .all_elements .element .description {
   border-radius: 0 0 1.5em 1.5em;
   height: 5em;
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0em 1em;
+  padding: 0.5em 1em;
 }
-.functioning_restaurants .restaurants .cards .element .description .text {
+.functioning_restaurants .restaurants .cards .all_elements .element .description .text {
   line-height: 0.5;
 }
-.functioning_restaurants .restaurants .cards .element .description .text .title {
+.functioning_restaurants .restaurants .cards .all_elements .element .description .text .title {
   font-weight: 700;
 }
+
+.number1, .number2, .number3 {
+  display: flex;
+  align-items: baseline;
+  margin: auto;
+}
+
 @media screen and (min-width: 601px) and (max-width: 1000px) {
-  .functioning_restaurants .reservation {
-    width: 30em;
-    margin: auto;
-  }
-  .functioning_restaurants .reservation .select_menu button {
+  .reservation .select_menu button {
     width: 50%;
   }
-  .functioning_restaurants .functioning_restaurants {
-    display: flex;
-    flex-direction: row;
-    width: 30em;
-    margin: auto;
-  }
-  .functioning_restaurants .functioning_restaurants .functioning {
-    width: 40%;
-  }
-  .functioning_restaurants .functioning_restaurants .restaurants {
-    width: 60%;
-  }
-  .functioning_restaurants .functioning_restaurants .restaurants .all_elements {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    flex-wrap: wrap;
-    margin: auto;
-  }
-  .functioning_restaurants .functioning_restaurants .restaurants .all_elements .element {
+
+  .functioning_restaurants .element {
     width: 30%;
   }
-  .functioning_restaurants .functioning_restaurants .restaurants .all_elements .element .nouveau1, .functioning_restaurants .functioning_restaurants .restaurants .all_elements .element .nouveau2 {
+  .functioning_restaurants .element .nouveau1, .functioning_restaurants .element .nouveau2 {
     width: 42%;
     right: -325px;
   }
-  .functioning_restaurants .number1, .functioning_restaurants .number2, .functioning_restaurants .number3 {
+
+  .number1, .number2, .number3 {
     display: flex;
     align-items: baseline;
-    margin-right: auto;
-  }
-  .functioning_restaurants footer {
-    width: 30em;
     margin: auto;
   }
 }
 @media screen and (min-width: 1001px) {
-  .functioning_restaurants .reservation .select_menu button {
+  .reservation .select_menu button {
     width: 40%;
   }
-  .functioning_restaurants .functioning_restaurants {
+
+  .functioning_restaurants .functioning {
     display: flex;
     flex-direction: row;
   }
-  .functioning_restaurants .functioning_restaurants .functioning {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-  }
-  .functioning_restaurants .functioning_restaurants .functioning h3 {
+  .functioning_restaurants .functioning h3 {
     margin-right: 2em;
   }
-  .functioning_restaurants .functioning_restaurants .functioning div {
+  .functioning_restaurants .functioning div {
     display: flex;
-    flex-direction: column;
+    margin-right: 3em;
   }
-  .functioning_restaurants .functioning_restaurants .restaurants {
+  .functioning_restaurants .restaurants {
     display: flex;
-    width: 60%;
   }
-  .functioning_restaurants .functioning_restaurants .restaurants .all_elements {
+  .functioning_restaurants .restaurants .all_elements {
     display: flex;
     flex-direction: row;
   }
-  .functioning_restaurants .functioning_restaurants .restaurants .all_elements .element {
-    width: 50%;
+  .functioning_restaurants .restaurants .all_elements .element {
     padding-bottom: 0.2em;
   }
-  .functioning_restaurants .functioning_restaurants .restaurants .all_elements .element .nouveau1, .functioning_restaurants .functioning_restaurants .restaurants .all_elements .element .nouveau2 {
-    width: 44%;
+
+  .number1, .number2, .number3 {
+    display: flex;
+    align-items: baseline;
+    margin: auto;
   }
 }
 
