--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,370 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-header {
-  color: #000;
-  height: 5em;
-  padding: 0.5em 0.5em;
-}
-header .logo {
-  display: flex;
-  justify-content: center;
-  font-size: 2.5em;
-  font-family: Shrikhand, OpenSans, Montserrat, Raleway;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 9 | @import "./layout/nav";
+ *   |         ^^^^^^^^^^^^^^
+ *   '
+ *   SASS\src\main.scss 9:9  root stylesheet */
 
-footer {
-  background: #000;
-  color: #fff;
-  padding: 1em 2em 1em 2em;
-}
-footer .logo {
-  color: #fff;
-  font-size: 1em;
-  font-family: Shrikhand, OpenSans, Montserrat, Raleway;
-  line-height: 2.5;
-}
-footer ul li {
-  list-style: none;
-  line-height: 1.5;
-}
-footer ul li i {
-  margin-right: 0.5em;
-}
-footer ul li a {
-  text-decoration-line: none;
-  color: #fff;
-}
-
-@media screen and (min-width: 601px) and (max-width: 1000px) {
-  footer .logo {
-    display: flex;
-    justify-content: center;
-  }
-  footer ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  footer ul li {
-    margin-right: 2em;
-    display: flex;
-    align-items: center;
-  }
-  footer ul li i {
-    margin-right: 1em;
-  }
-}
-@media screen and (min-width: 1001px) {
-  footer .logo {
-    display: flex;
-    justify-content: center;
-  }
-  footer ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  footer ul li {
-    margin-right: 3em;
-    display: flex;
-  }
-}
-.heart {
-  background-image: url("../../images/svg/heart-thin.svg");
-  width: 1.5em;
-  height: 1.5em;
-  background-repeat: no-repeat;
-  margin: 16px;
-}
-.heart:hover {
-  background-image: url("../../images/svg/heart.svg");
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, serif;
-}
-
-span, p {
-  font-weight: normal;
-  font-size: 1em;
-  padding: 0.5em 0.5em;
-  line-height: 1;
-}
-
-body {
-  font: 100% Roboto, sans-serif;
-  color: #000;
-}
-
-.spinner {
-  color: #9356DC;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform: scale 3, 0.5;
-  animation: disappearance 1s 2s forwards;
-}
-.spinner:hover {
-  color: #c0b7b7;
-  transition: 1s;
-}
-
-@keyframes disappearance {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-.contenu {
-  animation: apparition 1s 2s forwards;
-  opacity: 0;
-}
-
-@keyframes apparition {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.reservation {
-  background-color: #e6e3e3;
-  margin: 0.5em 0em;
-}
-.reservation h2 {
-  display: flex;
-  justify-content: center;
-  line-height: 1;
-}
-.reservation .location {
-  padding: 0.5em 0.5em;
-  background-color: #d3d3d3;
-  display: flex;
-  justify-content: center;
-  border-top: 0.1em solid #c0b7b7;
-}
-.reservation .location input {
-  background-color: #d3d3d3;
-  border: none;
-}
-.reservation .select_menu {
-  background-color: #e6e3e3;
-  padding: 1.5em 1.5em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.reservation .select_menu button {
-  color: #fff;
-  background-image: linear-gradient(#FF79DA, #9356DC);
-  border-radius: 5em;
-  padding: 0.8em 1.5em;
-  display: flex;
-  justify-content: center;
-  box-shadow: 0.3em 0.3em 0.15em #d3d3d3;
-  cursor: pointer;
-}
-
-.functioning_restaurants {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.functioning_restaurants .functioning {
-  padding: 2em 1em 1em 1em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-}
-.functioning_restaurants .functioning h3 {
-  line-height: 1;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
   margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 9 \2502  @import \"./layout/nav\";\d\a   \2502          ^^^^^^^^^^^^^^\a   \2575 \a   SASS\\src\\main.scss 9:9  root stylesheet";
 }
-.functioning_restaurants .functioning div {
-  background-color: #e6e3e3;
-  border-radius: 2em;
-  padding: 1em 1em;
-  margin-bottom: 1em;
-  width: 90%;
-  box-shadow: 0.3em 0.3em 0.15em #d3d3d3;
-}
-.functioning_restaurants .functioning div .number {
-  border-radius: 50%;
-  border: 0.5em solid #9356DC;
-  background-color: #9356DC;
-  color: #fff;
-  font-size: 0.8em;
-  padding: 0.02em 0.2em;
-  margin: 0 1.5em 0 -1.5em;
-}
-.functioning_restaurants .functioning div i {
-  padding: 0 0.7em 0 0;
-}
-.functioning_restaurants .functioning div:hover {
-  background-color: #e4d5f6;
-}
-.functioning_restaurants .functioning div:hover i {
-  color: #782cd3;
-}
-.functioning_restaurants .restaurants {
-  margin-top: 2em;
-  padding: 0.8em 0.8em;
-  line-height: 1.5em;
-  background-color: #e6e3e3;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.functioning_restaurants .restaurants .cards {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border-radius: 2em;
-  width: 100%;
-}
-.functioning_restaurants .restaurants .cards h3 {
-  display: flex;
-  margin-bottom: 1em;
-}
-.functioning_restaurants .restaurants .cards .all_elements {
-  margin: auto auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.functioning_restaurants .restaurants .cards .all_elements .element {
-  width: 25em;
-  background-color: #fff;
-  border-radius: 1.5em;
-  height: 20em;
-  margin: 1em 1em 2em 1em;
-  box-shadow: 0.3em 0.3em 0.15em #d3d3d3;
-}
-.functioning_restaurants .restaurants .cards .all_elements .element a {
-  text-decoration: none;
-  color: #000;
-}
-.functioning_restaurants .restaurants .cards .all_elements .element .palette-du-gout, .functioning_restaurants .restaurants .cards .all_elements .element .note-enchantee, .functioning_restaurants .restaurants .cards .all_elements .element .a-la-francaise, .functioning_restaurants .restaurants .cards .all_elements .element .delice-des-sens {
-  height: 15em;
-  border-top-right-radius: 1.5em;
-  border-top-left-radius: 1.5em;
-  background-size: cover;
-  background-position: center;
-}
-.functioning_restaurants .restaurants .cards .all_elements .element .palette-du-gout {
-  background-image: url("../../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-}
-.functioning_restaurants .restaurants .cards .all_elements .element .note-enchantee {
-  background-image: url("../../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
-}
-.functioning_restaurants .restaurants .cards .all_elements .element .a-la-francaise {
-  background-image: url("../../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
-}
-.functioning_restaurants .restaurants .cards .all_elements .element .delice-des-sens {
-  background-image: url("../../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
-}
-.functioning_restaurants .restaurants .cards .all_elements .element .nouveau1, .functioning_restaurants .restaurants .cards .all_elements .element .nouveau2 {
-  color: #2c9c81;
-  background-color: #99E2D0;
-  border-radius: 0.5em;
-  width: 20%;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-  height: 1.5em;
-  position: relative;
-  top: 14px;
-  right: -296px;
-}
-.functioning_restaurants .restaurants .cards .all_elements .element .description {
-  border-radius: 0 0 1.5em 1.5em;
-  height: 5em;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 0.5em 1em;
-}
-.functioning_restaurants .restaurants .cards .all_elements .element .description .text {
-  line-height: 0.5;
-}
-.functioning_restaurants .restaurants .cards .all_elements .element .description .text .title {
-  font-weight: 700;
-}
-
-.number1, .number2, .number3 {
-  display: flex;
-  align-items: baseline;
-  margin: auto;
-}
-
-@media screen and (min-width: 601px) and (max-width: 1000px) {
-  .reservation .select_menu button {
-    width: 50%;
-  }
-
-  .functioning_restaurants .element {
-    width: 30%;
-  }
-  .functioning_restaurants .element .nouveau1, .functioning_restaurants .element .nouveau2 {
-    width: 42%;
-    right: -325px;
-  }
-
-  .number1, .number2, .number3 {
-    display: flex;
-    align-items: baseline;
-    margin: auto;
-  }
-}
-@media screen and (min-width: 1001px) {
-  .reservation .select_menu button {
-    width: 40%;
-  }
-
-  .functioning_restaurants .functioning {
-    display: flex;
-    flex-direction: row;
-  }
-  .functioning_restaurants .functioning h3 {
-    margin-right: 2em;
-  }
-  .functioning_restaurants .functioning div {
-    display: flex;
-    margin-right: 3em;
-  }
-  .functioning_restaurants .restaurants {
-    display: flex;
-  }
-  .functioning_restaurants .restaurants .all_elements {
-    display: flex;
-    flex-direction: row;
-  }
-  .functioning_restaurants .restaurants .all_elements .element {
-    padding-bottom: 0.2em;
-  }
-
-  .number1, .number2, .number3 {
-    display: flex;
-    align-items: baseline;
-    margin: auto;
-  }
-}
-
-/*# sourceMappingURL=main.css.map */
