--- a/SASS/src/main.scss
+++ b/SASS/src/main.scss
@@ -3,19 +3,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 
 @import "./utils/variables";
-//@import "./utils/mixins";
-//@import "./utils/functions";
 @import "./layout/header";
-@import "./layout/nav";
 @import "./layout/footer";
 
 
 //Animation : coeur qui se remplit
 .heart {
     background-image: url("../../images/svg/heart-thin.svg");
+    background-repeat: no-repeat;
     width: 1.5em;
     height: 1.5em;
-    background-repeat: no-repeat;
     margin: 16px;
     &:hover {
         background-image: url("../../images/svg/heart.svg");
@@ -97,12 +94,11 @@ body {
         line-height: 1;
     }
     & .location {
-        padding: 0.5em 0.5em;
         background-color: $neutral-color-300;
+        padding: 0.5em 0.5em;
         display: flex;
         justify-content: center;
         border-top: 0.1em solid $neutral-color-400;
-        //box-shadow: 1.5em 2em 2em 0.5em $neutral-color-300; /*chiffres à revoir*/
         & input {
             background-color: $neutral-color-300;
             border: none;
@@ -150,7 +146,6 @@ body {
             margin-bottom: 1em;
             width: 90%;
             box-shadow: 0.3em 0.3em 0.15em $neutral-color-300;
-            //align-items: baseline;
             & .number {
                 border-radius: 50%;
                 border: 0.5em solid $primary-color;
@@ -191,18 +186,14 @@ body {
                 margin-bottom: 1em;
             }
             .all_elements {
-                margin: auto auto; //ajout
                 display: flex;
                 flex-wrap: wrap;
-                justify-content: center;
+                justify-content: space-around;
                 & .element {
-                    //width: 80%;
-                    //width: 25em;
-                    width: 21em;
+                    width: 350px;
                     background-color: $neutral-color-100;
                     border-radius: 1.5em;
                     height: 20em;
-                    //margin: 1em 1em 2em 1em; //ajout
                     margin: 1em 0em;
                     box-shadow: 0.3em 0.3em 0.15em $neutral-color-300;
                     & a {
@@ -232,28 +223,27 @@ body {
                         color: darken($tertiary-color, 35%);
                         background-color: $tertiary-color;
                         border-radius: 0.5em;
-                        width: 20%;
+                        width: 23%;
                         padding-left: 0.5em;
                         padding-right: 0.5em;
                         height: 1.5em;
                         position: relative;
                         top: 14px;
-                        right: -296px;
+                        right: -250px;
                     }
                     & .description {
                         border-radius: 0 0 1.5em 1.5em;
                         height: 5em;
-                        //width: 100%;
                         display: flex;
                         flex-direction: row;
                         justify-content: space-between;
                         padding: 0.5em 1em;
                         & .text {
                             line-height: 0.5;
-                                & .title {
-                                    font-weight: 700;
-                                }
+                            & .title {
+                                font-weight: 700;
                             }
+                        }
                     }
                 }
             }
@@ -270,8 +260,6 @@ body {
 //tablettes
 @media screen and (min-width: 601px) and (max-width: 1000px) {
     .reservation {
-        //width: 40em;
-        //margin: auto;
         & .select_menu {
             & button {
                 width: 50%;
@@ -279,8 +267,6 @@ body {
         }
     }
     .functioning_restaurants {
-        //width: 40em;
-        //margin: auto;
         .element {
             width: 30%;
             .nouveau1, .nouveau2 {
@@ -295,8 +281,6 @@ body {
         margin: auto;
     }
 }
-
-
 
 //ordinateurs
 @media screen and (min-width: 1001px) {
@@ -316,7 +300,6 @@ body {
             }
             & div {
                 display: flex;
-                //width: 30%;
                 margin-right: 3em;
             }
         }
@@ -325,6 +308,8 @@ body {
             & .all_elements {
                 display: flex;
                 flex-direction: row;
+                width: 80%;
+                margin: auto auto;
                 & .element {
                     padding-bottom: 0.2em;
                 }
