--- a/SASS/src/menu1.scss
+++ b/SASS/src/menu1.scss
@@ -56,7 +56,7 @@ section {
             display: flex;
             flex-direction: row;
             & h2 {
-                align-items: left;
+                align-items: start;
                 font-family: Shrikhand;
                 margin-right: 5em;
             }
@@ -255,7 +255,7 @@ section {
                 display: flex;
                 flex-direction: row;
                 & h2 {
-                    align-items: left;
+                    align-items: start;
                     font-family: Shrikhand;
                     margin-left: 0.5em;
                     margin-right: 5em;
@@ -291,7 +291,7 @@ section {
                 flex-direction: row;
 
                 & h2 {
-                    align-items: left;
+                    align-items: start;
                     font-family: Shrikhand;
                     margin-left: 0.5em;
                     margin-right: 5em;
