--- a/public/css/main.css
+++ b/public/css/main.css
@@ -113,7 +113,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: scale 3, 0.5;
+  transform: scale(3, 0.5);
   animation: disappearance 1s 2s forwards;
 }
 .spinner:hover {
