--- a/SASS/src/main.scss
+++ b/SASS/src/main.scss
@@ -52,7 +52,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    transform: scale(3, 0.5);
+    //transform: scale(3, 0.5);
+    transform: scale(1);
     animation: disappearance 1s 2s forwards;
     &:hover {
         color: $neutral-color-400;
