--- a/public/css/menu1.css
+++ b/public/css/menu1.css
@@ -6105,7 +6105,7 @@ header .logo {
 }
 
 footer {
-  background: #000;
+  background-color: #333333;
   color: #fff;
   padding: 1em 2em 1em 2em;
 }
