--- a/SASS/src/main.scss
+++ b/SASS/src/main.scss
@@ -89,17 +89,15 @@ body {
 .reservation {
     background-color: $neutral-color-200;
     margin: 0.5em 0em;
-    & h2 {
-        display: flex;
-        justify-content: center;
-        line-height: 1;
-    }
     & .location {
         background-color: $neutral-color-300;
         padding: 0.5em 0.5em;
         display: flex;
         justify-content: center;
         border-top: 0.1em solid $neutral-color-400;
+        & i {
+            margin-right: 0.5em;
+        }
         & input {
             background-color: $neutral-color-300;
             border: none;
@@ -112,6 +110,14 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        & h3 {
+            display: flex;
+            justify-content: center;
+            line-height: 1;
+        }
+        & .decouvrez {
+            text-align: center;
+        }
         & button {
             color: $neutral-color-100;
             background-image: linear-gradient($secondary-color, $primary-color);
