--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 header {
   color: #000;
-  height: 5em;
+  height: 4.5em;
   padding: 0.5em 0.5em;
 }
 header .logo {
@@ -14,7 +14,7 @@ header .logo {
 }
 
 footer {
-  background: #000;
+  background-color: #333333;
   color: #fff;
   padding: 1em 2em 1em 2em;
 }
@@ -146,17 +146,15 @@ body {
   background-color: #e6e3e3;
   margin: 0.5em 0em;
 }
-.reservation h2 {
-  display: flex;
-  justify-content: center;
-  line-height: 1;
-}
 .reservation .location {
   background-color: #d3d3d3;
   padding: 0.5em 0.5em;
   display: flex;
   justify-content: center;
   border-top: 0.1em solid #c0b7b7;
+}
+.reservation .location i {
+  margin-right: 0.5em;
 }
 .reservation .location input {
   background-color: #d3d3d3;
@@ -169,6 +167,14 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.reservation .select_menu h3 {
+  display: flex;
+  justify-content: center;
+  line-height: 1;
+}
+.reservation .select_menu .decouvrez {
+  text-align: center;
 }
 .reservation .select_menu button {
   color: #fff;
